<resources>
    <string name="app_name">K Notes</string>
    <string name="action_settings">Settings</string>
    <string name="add">add</string>
    <string name="search">search</string>
    <string name="delete">delete</string>
    <string name="title_activity_background">Background</string>
    <string name="search_hint">search_hint</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="back">back</string>
</resources>
