<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wangkun.comp6442assignment12016.FolderShowActivity">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        android:orderInCategory="100"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>