<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wangkun.comp6442assignment12016.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>